--- a/README
+++ b/README
@@ -2,6 +2,9 @@ brandon.oden@my.tccd.edu
 ITSE 2417: Java Programming
 My Project
 
+NOTE: I was taught the basics of JavaFX and then given a week to do this. The intructions 
+were to keep it very simple, but I was overly ambitious, so we're left with a work in progress.
+
 References: 
 MediaDemo.java from p.663-664
 FlagAnthem.java, p.666-667
